# Iridium

./: Cargo.toml
crates/components/: Cargo.toml
crates/components/src/: lib.rs  parse.rs
crates/components/src/colors/: mod.rs
crates/components/src/resolver/: gradient.rs  mod.rs  style.rs
crates/entity/: Cargo.toml
crates/entity/src/: entity_type.rs  lib.rs
crates/entity/src/types/: player.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  player_connection.rs
crates/network/src/event/server/: mod.rs
crates/network/src/packets/: mod.rs
crates/network/src/packets/bidirectional/configuration/: mod.rs
crates/network/src/packets/client/login/: mod.rs
crates/network/src/packets/client/status/: mod.rs
crates/network/src/packets/server/: mod.rs
crates/network/src/packets/server/configuration/: mod.rs
crates/network/src/packets/server/handshake/: handshake.rs
crates/network/src/packets/server/login/: acknowledged.rs  mod.rs
crates/network/src/packets/server/status/: mod.rs  ping.rs
crates/network/src/states/: mod.rs
crates/network/src/states/configuration/: mod.rs
crates/network/src/states/handshaking/: mod.rs
crates/network/src/states/login/: mod.rs
crates/network/src/states/status/: mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/src/packets/: mod.rs
crates/protocol/src/packets/client/status/: mod.rs
crates/protocol/src/packets/server/configuration/: handshake.rs
crates/protocol/src/packets/server/status/: mod.rs  ping.rs
crates/protocol/src/serial/: mod.rs
crates/protocol/src/types/: mod.rs  property.rs  types.rs  var_int.rs  vec.rs
crates/server/: Cargo.toml
crates/server/src/: iridium_server.rs  lib.rs
crates/server/src/game/: mod.rs
crates/world/: Cargo.toml
crates/world/src/: chunk.rs  lib.rs
crates/world/src/generator/: flat.rs  mod.rs  pregen.rs
src/: lib.rs
test/: Cargo.toml  server.yml
test/src/: main.rs
