[package]
name = "network"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
protocol.workspace = true
bytes.workspace = true
log.workspace = true
async-trait.workspace = true
macros.workspace = true
events.workspace = true
components.workspace = true
serde.workspace = true
serde_json.workspace = true
entity.workspace = true
uuid.workspace = true
