[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
dotenvy.workspace = true
simple_logger.workspace = true
log.workspace = true
time.workspace = true
tokio.workspace = true
async-trait.workspace = true
network.workspace = true
serde_yaml.workspace = true
serde.workspace = true
ahash.workspace = true
